# cpu-scheduling-algorithms-sim

./: .gitignore  README.md  docker-compose.yml
core/: .dockerignore  CMakeLists.txt  Dockerfile  Process.cpp  Process.h  json_sender.cpp  main.cpp  metric.cpp  scheduler.cpp  scheduler.hpp  server.cpp
core/algorithms/: Fcfs.cpp  Fcfs.hpp  priority.cpp  priority.hpp  round_robin.cpp  round_robin.hpp  sjf.cpp  sjf.hpp
core/file-loader/: file_loader.hpp
core/files/: processes.txt
core/include/: Fcfs.hpp  Metric.hpp  Process.hpp  json_sender.hpp  priority.hpp  round_robin.hpp  scheduler.hpp  sjf.hpp
core/metrics/: Metric.hpp  metric.cpp  metrics_notify.hpp
core/process-metrics/: Process-json.hpp
ui/: .dockerignore  Dockerfile  package-lock.json  package.json
ui/src/: App.vue
ui/src/components/: AppHeader.vue  ComparisonPanel.vue  ConnectionStatus.vue  MetricsTable.vue  ProcessCard.vue  ProcessDisplay.vue  ProcessForm.vue  ProcessList.vue  SimulationArea.vue
